// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarFileProperties render() should render ItemProperties 1`] = `
<LoadingIndicatorWrapper>
  <ItemProperties
    archivedAt={1726832355000}
    createdAt="2018-04-18T16:56:05.352Z"
    description="foo"
    descriptionTextareaProps={
      {
        "data-resin-target": "description",
      }
    }
    modifiedAt="2018-04-18T16:56:05.352Z"
    onDescriptionChange={[MockFunction]}
    owner="foo"
    retentionPolicyProps={{}}
    size="1 B"
    uploader="foo"
  />
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/SidebarFileProperties render() should render ItemProperties for anonymous uploaders 1`] = `
<LoadingIndicatorWrapper>
  <ItemProperties
    archivedAt={1726832355000}
    createdAt="2018-04-18T16:56:05.352Z"
    description="foo"
    descriptionTextareaProps={
      {
        "data-resin-target": "description",
      }
    }
    modifiedAt="2018-04-18T16:56:05.352Z"
    onDescriptionChange={[MockFunction]}
    owner="foo"
    retentionPolicyProps={{}}
    size="1 B"
    uploader="File Request"
  />
</LoadingIndicatorWrapper>
`;

exports[`elements/content-sidebar/SidebarFileProperties render() should render an error 1`] = `
<Fragment>
  <InlineError
    title={
      <FormattedMessage
        defaultMessage="baz"
        description="bar"
        id="foo"
      />
    }
  >
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  </InlineError>
  <SidebarFileProperties
    intl={
      {
        "formatDate": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatRelativeTime": [Function],
      }
    }
  />
</Fragment>
`;

exports[`elements/content-sidebar/SidebarFileProperties render() should render retention policy information when given proper props and callback 1`] = `
<SidebarFileProperties
  file={
    {
      "size": "1",
    }
  }
  hasRetentionPolicy={true}
  intl={
    {
      "locale": "en",
    }
  }
  onRetentionPolicyExtendClick={[MockFunction]}
  retentionPolicy={
    {
      "dispositionTime": 1556317461,
      "policyName": "test policy",
      "policyType": "finite",
      "retentionPolicyDescription": "test policy (1 year retention & auto-deletion",
    }
  }
>
  <LoadingIndicatorWrapper>
    <div
      className="loading-indicator-wrapper "
    >
      <ItemProperties
        descriptionTextareaProps={
          {
            "data-resin-target": "description",
          }
        }
        retentionPolicyProps={
          {
            "dispositionTime": 1556317461,
            "openModal": [MockFunction],
            "policyName": "test policy",
            "policyType": "finite",
            "retentionPolicyDescription": "test policy (1 year retention & auto-deletion",
          }
        }
        size="1 B"
      >
        <dl
          className="item-properties"
        >
          <FormattedMessage
            defaultMessage="Size"
            id="boxui.itemDetails.size"
            tagName="dt"
          >
            <div />
          </FormattedMessage>
          <dd>
            1 B
          </dd>
          <RetentionPolicy
            dispositionTime={1556317461}
            openModal={[MockFunction]}
            policyName="test policy"
            policyType="finite"
            retentionPolicyDescription="test policy (1 year retention & auto-deletion"
          >
            <FormattedMessage
              defaultMessage="Policy"
              id="boxui.itemDetails.retentionPolicyDescription"
              tagName="dt"
            >
              <div />
            </FormattedMessage>
            <dd>
              test policy (1 year retention & auto-deletion
            </dd>
            <FormattedMessage
              defaultMessage="Policy Expiration"
              id="boxui.itemDetails.retentionPolicyExpiration"
              tagName="dt"
            >
              <div />
            </FormattedMessage>
            <dd>
              <FormattedDate
                day="numeric"
                month="short"
                value={1970-01-19T00:18:37.461Z}
                year="numeric"
              >
                <div />
              </FormattedDate>
              <PlainButton
                className="lnk bdl-RetentionLink"
                data-target-id="PlainButton-retentionPolicyExtendButton"
                onClick={[MockFunction]}
              >
                <button
                  className="btn-plain lnk bdl-RetentionLink"
                  data-target-id="PlainButton-retentionPolicyExtendButton"
                  onClick={[MockFunction]}
                  type="submit"
                >
                  <FormattedMessage
                    defaultMessage="Extend"
                    id="boxui.itemDetails.retentionPolicyExtend"
                  >
                    <div />
                  </FormattedMessage>
                </button>
              </PlainButton>
            </dd>
          </RetentionPolicy>
        </dl>
      </ItemProperties>
    </div>
  </LoadingIndicatorWrapper>
</SidebarFileProperties>
`;
